kubernetes/ingress/ingress.yml
# For ingress to be aplied there must be ingress controller deployed
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: some.example.com
    http:
      paths:
      - path: /service1
        backend:
          serviceName: s1
          servicePort: 80
      - path: /service2
        backend:
          serviceName: s2
          servicePort: 80


### Apply the nginx ingress controller
## kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/mandatory.yaml

## NodePort svc for the ingress on bare-metal
## kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/provider/baremetal/service-nodeport.yaml

## Documentation and installation
## https://kubernetes.github.io/ingress-nginx/deploy/
